# kindle-sdr-cleaner

./: LICENSE  README.md  kindle_sdr_cleaner.py  pyproject.toml
.github/workflows/: push.yml
